// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EPDA quote variant golden output > HCM preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "70fd2954b8f13e7be27956c0834a0ec0cfd372ffaac07f15ac5e3669966749aa",
  "totals": {
    "A": "12,750.80",
    "B": "980.00",
    "G": "13,730.80",
  },
}
`;

exports[`EPDA quote variant golden output > HN preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "70fd2954b8f13e7be27956c0834a0ec0cfd372ffaac07f15ac5e3669966749aa",
  "totals": {
    "A": "12,750.80",
    "B": "980.00",
    "G": "13,730.80",
  },
}
`;

exports[`EPDA quote variant golden output > QN preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "bc390edc4ed12466eaddc4d3da059e1387a0f57d90eb06384e22a2048a2908ed",
  "totals": {
    "A": "14,714.80",
    "B": "980.00",
    "G": "15,694.80",
  },
}
`;
